Updated files with latest changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="center">
         <h1>PEOPLE ENTERED</h1>
         <h2 id="count-el">0</h2>
-        <button id="increament-btn" onclick="increament()">INCREAMENT</button><br>
-        <button  onclick="save()">SAVE</button>
+        <button id="increament-btn" onclick="increament()">INCREAMENT</button><br><br>
+        <button id="save-btn" onclick="save()">SAVE</button>
         <p id="save-el">Previous entries:</p>
     </div>
    
